test/libsolidity/syntaxTests/userDefinedValueType/non_value_type_function_err.sol
type MyFunction is function(uint) returns (uint);
// ----
// TypeError 8657: (19-49): The underlying type for a user defined value type has to be an elementary value type.
